# quesen-crewai

./: README.md  pyproject.toml
quesen_crewai/: __init__.py  tool.py
tests/: test_tool.py
